Required skill is aligned left..that was a bug

--- a/style.css
+++ b/style.css
@@ -275,6 +275,9 @@ body{
         justify-content: start !important;
         margin-top: 20px !important;
     }
+    .required-skill{
+        text-align: left !important;
+    }
      .newsletter-text{
         font-size: 24px !important;
         text-align: center !important;
@@ -385,6 +388,7 @@ body{
         padding: 40px 30px  !important ;
 
         }
+   
     
 }
 /******************************** Popular job section ************************/
@@ -472,6 +476,7 @@ body{
 .required-skill{
     color: var(--secondary-color);
     font-size: 14px;
+    text-align: left;
 }
 .salary-and-button{
     display: flex;
@@ -638,7 +643,7 @@ body{
     font-size: 34px;
     font-weight: 700;
     line-height: 150%;
-    /* text-align: center; */
+    text-align: center;
 }
   .input-wrapper {
     display: flex;
@@ -837,6 +842,7 @@ body{
         /* border: 1px solid red; */
         padding-top: 20px !important;
     }
+   
 }
 
 /* =============Footer DropDown==========*/
